<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_weixin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/weixin_background_color"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/img_weixin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/weixin"
        />

    <TextView
        android:id="@+id/tv_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_weixin"
        android:layout_centerHorizontal="true"
        android:text="@string/weixin_version"
        android:textColor="@color/gray"
        android:textSize="18sp"
        />

    <ListView
        android:id="@+id/lv_weixin_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_weixin"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    </ListView>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/copyright"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/privacy"
        android:textColor="@color/blue"
        android:textSize="14sp"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="256"

        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_below="@+id/lv_weixin_about"/>


</RelativeLayout>